List in task section and ability to click on list elements to print them out briefly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
     <string name="app_name">FYP_V3</string>
     <string name="button_to_tasks">Tasks</string>
